package com.example.handz6.data.dto

data class EquipoDto(
    val id: Long,
    val nombre: String,
    val logoUrl: String? = null
)