package com.example.handz6.data.dto

data class RolDto(
    val id: Long,
    val nombre: String
)
