package com.example.handz6.data.dto

data class TipoEventoDto(
    val id: Long,
    val nombre: String
)
